# blog-writer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: 2026년 2월 기준 브라우저 자동화용 VLM 비용-성능 분석  VLM_DECISION_AND_PLAN_UPDATE.md
scripts/: explore_advanced_features.py  explore_editor_tools.py  explore_link_ui.py  explore_oglink_modal.py  explore_workflow.py  explore_workflow_v2.py  explore_workflow_v3.py  generate_article.py  import_blog_archive.py  publish_article.py  publish_cdp.py  publish_cdp_v2.py  test_adaptive_publish.py  test_all_features.py  test_formatting.py  test_full_publish.py  test_image_link.py  test_image_quote_publish.py  test_image_upload_v2.py  test_image_with_link.py  test_link_explore.py  test_link_handler.py  test_link_only.py  test_oglink_direct.py  test_oglink_fix.py  test_pipeline.py  test_publish_simple.py  test_real_publish.py  test_rich_content.py  test_seo_pipeline.py  test_text_link.py
sql/: create_all_tables.sql  create_blog_archive.sql
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  archive.py  articles.py  pipeline.py  publish.py
src/archive/: __init__.py  classifier.py  parser.py
src/content/: generator.py
src/content/prompts/: __init__.py  cctv_domain.py  seo_prompts.py
src/core/: config.py
src/pipeline/: __init__.py  auto_publisher.py
src/publisher/: adaptive_publisher.py  naver_publisher.py
src/research/: __init__.py  competition_analyzer.py  naver_search.py
src/shared/: deepseek_client.py  models.py  supabase_client.py
src/traffic/: __init__.py  trigger.py
(+8 files in other folders)
